# framec-test-env

./: .gitignore  DOCKER_TEST_PROGRESS.md  GETTING_STARTED.md  MIGRATION_STATUS.md  README.md  RESTRUCTURE_PLAN.md  RESTRUCTURE_PLAN_ADDENDUM.md  SHARED_TEST_ENV_PROPOSAL.md
adapter_protocol/: README.md  adapter_protocol_full.frm  adapter_protocol_minimal.frm  package-lock.json  package.json  test_fixture_ts_codegen_fields.frm  test_fixture_ts_runtime_helpers.frm  tsconfig.json
adapter_protocol/runtime/: frame_runtime_ts.d.ts
adapter_protocol/scripts/: node_fda_harness.js  node_harness.js  node_harness.ts  run_adapter_event_routing_smoke.js  run_adapter_scopes_smoke.js  run_adapter_smoke.sh  run_adapter_terminated_smoke.js  run_all_smokes.sh  run_fda_smoke.sh  run_runtime_smoke_breakpoint.sh  run_runtime_smoke_breakpoint_local.js  run_runtime_smoke_breakpoint_resume.sh  run_runtime_smoke_entry.sh  run_runtime_smoke_entry_local.js  run_runtime_smoke_resume.sh  run_runtime_smoke_step.sh  run_runtime_smoke_step_in_out.sh  run_runtime_smokes.sh  ts_compile_fixture.sh
bug/: BUG_TRACKING_POLICY.md  INDEX.md  README.md  TEMPLATE.md  tests_091_py_compile_debug_runtime.sh  tests_095_rust_v3_multi_state_interface.sh
bug/bugs/: bug_073_typescript_duplicate_methods_per_state.md  bug_074_typescript_generator_missing_actions_and_domain_decls.md  bug_078_typescript_runtime_dts_mismatch_generator_calls.md  bug_079_typescript_missing_public_interface_wrappers_and_router_parity.md  bug_080_typescript_multiface_public_wrappers_router_start_state.md  bug_081_typescript_adapter_semantics_guard_deferral_stopped_state.md  bug_082_typescript_drain_returns_undefined_in_generated_methods.md  bug_083_typescript_stopped_event_does_not_set_ispaused.md  bug_084_fda_frm_uses_python_syntax_under_typescript_target.md  bug_085_typescript_codegen_missing_class_field_declarations_for_native_bodies.md  bug_086_typescript_runtime_dts_missing_adapter_helper_declarations.md  bug_087_typescript_codegen_misparses_if_for_into_method_headers.md  bug_088_typescript_codegen_ignores_action_return_type_annotations.md  bug_089_typescript_codegen_event_routing_argument_arity_mismatch.md  bug_089_typescript_codegen_mismatched_event_routing_arity.md  bug_090_python_v3_nested_def_indentation_error_in_scoping_fixture.md  bug_091_python_debug_runtime_invalid_syntax.md  bug_092_python_v3_transition_indentation.md  bug_093_python_v3_parented_state_transition_indent.md  bug_094_v3_system_block_order_not_asserted_in_tests.md  bug_095_rust_v3_multi_state_interface_duplicate_methods.md  bug_096_runtimeprotocol_ts_codegen_python_syntax.md  (+1 more)
bugs/: cpp_backend.md  erlang_backend.md  initial_validation.md
common/: README.md
docker/: .gitignore  Dockerfile  Dockerfile.framec-builder  Makefile  README.md  build.sh  collect-results.sh  docker-compose.yml  framec-linux  run.sh
docs/: README.md  adding-a-language.md  docker.md  future-enhancements.md  partial-coverage-audit.md  runtime-capability-matrix.md  structural_audit_multi_fixture.md  structural_audit_report.md  writing-tests.md
framepiler/: README.md
framepiler/docker/: Cargo.toml  Dockerfile.framec  Dockerfile.python  Dockerfile.rust  Dockerfile.typescript  README.md  build.sh  build_images.sh  docker_executor.rs  push_images.sh  run_docker_test.sh  run_tests.sh  setup_local_registry.sh  tsconfig.docker.json
framepiler/docker/src/: main.rs
fuzz/: .gitignore  DEFECTS.md  DRY_RUN_STATUS.md  FUZZ_PLAN.md  PERF_RESULTS.md  PHASE10_MORNING_REPORT.md  README.md  TAG_VOCABULARY.md  TEST_INFRA_ROADMAP.md  TRACE_FORMAT.md  gen.py  gen_arith.py  gen_async_persist.py  gen_comments.py  gen_const_sys.py  gen_ctrl_flow.py  gen_hsm_cross.py  gen_multievent.py  gen_nested.py  gen_perf.py  gen_perm.py  gen_persist.py  gen_persist_multisys.py  gen_persist_x.py  gen_pushpop.py  gen_selfcall.py  gen_shadow.py  gen_state_args.py  gen_stmt_pair.py  gen_stress.py  run.sh  run_all.sh  run_arith.sh  run_comments.sh  run_const_sys.sh  run_ctrl_flow.sh  run_hsm_cross.sh  run_multievent.sh  run_negative.sh  run_nested.sh  (+11 more)
output/rust/: Cargo.toml
output/rust/tests/: 01_interface_return.rs  01_minimal.rs  02_interface.rs  03_transition.rs  04_native_code.rs  05_enter_exit.rs  06_domain_vars.rs  07_params.rs  08_hsm.rs  09_stack.rs  10_state_var_basic.rs  11_state_var_reentry.rs  12_state_var_push_pop.rs  13_system_return.rs  14_system_return_default.rs  15_system_return_chain.rs  16_system_return_reentrant.rs  17_transition_enter_args.rs  18_transition_exit_args.rs  19_transition_forward.rs  20_transition_pop.rs  21_actions_basic.rs  22_operations_basic.rs  23_persist_basic.rs  24_persist_roundtrip.rs  25_persist_stack.rs  26_state_params.rs  29_forward_enter_first.rs  30_hsm_default_forward.rs  31_doc_lamp_basic.rs  32_doc_lamp_hsm.rs  33_doc_history_basic.rs  34_doc_history_hsm.rs  35_return_init.rs  36_context_basic.rs  37_context_reentrant.rs  38_context_data.rs
python_test_crate/: requirements.txt
rust_test_crate/: Cargo.toml
rust_test_crate/tests/: 01_minimal.rs  02_interface.rs  03_transition.rs  04_native_code.rs  05_enter_exit.rs  06_domain_vars.rs  07_params.rs  08_hsm.rs  09_stack.rs  10_state_var_basic.rs  11_state_var_reentry.rs  12_state_var_push_pop.rs  13_system_return.rs  14_system_return_default.rs  15_system_return_chain.rs  16_system_return_reentrant.rs  17_transition_enter_args.rs  18_transition_exit_args.rs  19_transition_forward.rs  20_transition_pop.rs  21_actions_basic.rs  22_operations_basic.rs  23_persist_basic.rs  24_persist_roundtrip.rs  25_persist_stack.rs  26_state_params.rs  29_forward_enter_first.rs  30_hsm_default_forward.rs  31_doc_lamp_basic.rs  32_doc_lamp_hsm.rs  33_doc_history_basic.rs  34_doc_history_hsm.rs  persist_basic.rs  persist_roundtrip.rs  persist_stack.rs
sandbox/: README.md
scripts/: add_harness.py  check_coverage.py  cleanup_tests.py  port_recipe.py
tests/: README.md  run_all_tests.sh  run_single_test.sh  run_tests.sh  test_harness_experiment.ferl
tools/: structural_audit.py
typescript_test_crate/: package.json  tsconfig.json
(+14913 files in other folders)
