[package]
name = "frame_rust_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Add other common dependencies as needed:
# tokio = { version = "1", features = ["full"] }
# reqwest = "0.11"

[[bin]]
name = "persist_basic"
path = "tests/persist_basic.rs"

[[bin]]
name = "persist_roundtrip"
path = "tests/persist_roundtrip.rs"

[[bin]]
name = "persist_stack"
path = "tests/persist_stack.rs"
