[package]
name = "frame_rust_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Add other common dependencies as needed:
# tokio = { version = "1", features = ["full"] }
# reqwest = "0.11"

# V4 PRT Tests (01-25)
[[bin]]
name = "01_minimal"
path = "tests/01_minimal.rs"

[[bin]]
name = "02_interface"
path = "tests/02_interface.rs"

[[bin]]
name = "03_transition"
path = "tests/03_transition.rs"

[[bin]]
name = "04_native_code"
path = "tests/04_native_code.rs"

[[bin]]
name = "05_enter_exit"
path = "tests/05_enter_exit.rs"

[[bin]]
name = "06_domain_vars"
path = "tests/06_domain_vars.rs"

[[bin]]
name = "07_params"
path = "tests/07_params.rs"

[[bin]]
name = "08_hsm"
path = "tests/08_hsm.rs"

[[bin]]
name = "09_stack"
path = "tests/09_stack.rs"

[[bin]]
name = "10_state_var_basic"
path = "tests/10_state_var_basic.rs"

[[bin]]
name = "11_state_var_reentry"
path = "tests/11_state_var_reentry.rs"

[[bin]]
name = "12_state_var_push_pop"
path = "tests/12_state_var_push_pop.rs"

[[bin]]
name = "13_system_return"
path = "tests/13_system_return.rs"

[[bin]]
name = "14_system_return_default"
path = "tests/14_system_return_default.rs"

[[bin]]
name = "15_system_return_chain"
path = "tests/15_system_return_chain.rs"

[[bin]]
name = "16_system_return_reentrant"
path = "tests/16_system_return_reentrant.rs"

[[bin]]
name = "17_transition_enter_args"
path = "tests/17_transition_enter_args.rs"

[[bin]]
name = "18_transition_exit_args"
path = "tests/18_transition_exit_args.rs"

[[bin]]
name = "19_transition_forward"
path = "tests/19_transition_forward.rs"

[[bin]]
name = "20_transition_pop"
path = "tests/20_transition_pop.rs"

[[bin]]
name = "21_actions_basic"
path = "tests/21_actions_basic.rs"

[[bin]]
name = "22_operations_basic"
path = "tests/22_operations_basic.rs"

[[bin]]
name = "23_persist_basic"
path = "tests/23_persist_basic.rs"

[[bin]]
name = "24_persist_roundtrip"
path = "tests/24_persist_roundtrip.rs"

[[bin]]
name = "25_persist_stack"
path = "tests/25_persist_stack.rs"

[[bin]]
name = "26_state_params"
path = "tests/26_state_params.rs"

[[bin]]
name = "29_forward_enter_first"
path = "tests/29_forward_enter_first.rs"

[[bin]]
name = "30_hsm_default_forward"
path = "tests/30_hsm_default_forward.rs"

[[bin]]
name = "31_hsm_parent_vars"
path = "tests/31_hsm_parent_vars.rs"
