[package]
name = "frame-docker-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frame-docker-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
walkdir = "2.4"
colored = "2.0"
chrono = "0.4"

[lib]
name = "docker_executor"
path = "docker_executor.rs"