[package]
name = "frame_rust_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Add other common dependencies as needed:
# tokio = { version = "1", features = ["full"] }
# reqwest = "0.11"

# V4 PRT Tests (01-25)
[[bin]]
name = "01_interface_return"
path = "tests/01_interface_return.rs"

[[bin]]
name = "02_interface"
path = "tests/02_interface.rs"

[[bin]]
name = "03_transition"
path = "tests/03_transition.rs"

[[bin]]
name = "04_native_code"
path = "tests/04_native_code.rs"

[[bin]]
name = "05_enter_exit"
path = "tests/05_enter_exit.rs"

[[bin]]
name = "06_domain_vars"
path = "tests/06_domain_vars.rs"

[[bin]]
name = "07_params"
path = "tests/07_params.rs"

[[bin]]
name = "08_hsm"
path = "tests/08_hsm.rs"

[[bin]]
name = "09_stack"
path = "tests/09_stack.rs"

[[bin]]
name = "10_state_var_basic"
path = "tests/10_state_var_basic.rs"

[[bin]]
name = "11_state_var_reentry"
path = "tests/11_state_var_reentry.rs"

[[bin]]
name = "12_state_var_push_pop"
path = "tests/12_state_var_push_pop.rs"

[[bin]]
name = "13_system_return"
path = "tests/13_system_return.rs"

[[bin]]
name = "14_system_return_default"
path = "tests/14_system_return_default.rs"

[[bin]]
name = "15_system_return_chain"
path = "tests/15_system_return_chain.rs"

[[bin]]
name = "16_system_return_reentrant"
path = "tests/16_system_return_reentrant.rs"

[[bin]]
name = "17_transition_enter_args"
path = "tests/17_transition_enter_args.rs"

[[bin]]
name = "18_transition_exit_args"
path = "tests/18_transition_exit_args.rs"

[[bin]]
name = "19_transition_forward"
path = "tests/19_transition_forward.rs"

[[bin]]
name = "20_transition_pop"
path = "tests/20_transition_pop.rs"

[[bin]]
name = "21_actions_basic"
path = "tests/21_actions_basic.rs"

[[bin]]
name = "22_operations_basic"
path = "tests/22_operations_basic.rs"

[[bin]]
name = "23_persist_basic"
path = "tests/23_persist_basic.rs"

[[bin]]
name = "24_persist_roundtrip"
path = "tests/24_persist_roundtrip.rs"

[[bin]]
name = "25_persist_stack"
path = "tests/25_persist_stack.rs"

[[bin]]
name = "26_state_params"
path = "tests/26_state_params.rs"

[[bin]]
name = "29_forward_enter_first"
path = "tests/29_forward_enter_first.rs"

[[bin]]
name = "30_hsm_default_forward"
path = "tests/30_hsm_default_forward.rs"

[[bin]]
name = "31_doc_lamp_basic"
path = "tests/31_doc_lamp_basic.rs"

[[bin]]
name = "32_doc_lamp_hsm"
path = "tests/32_doc_lamp_hsm.rs"

[[bin]]
name = "33_doc_history_basic"
path = "tests/33_doc_history_basic.rs"

[[bin]]
name = "34_doc_history_hsm"
path = "tests/34_doc_history_hsm.rs"
[[bin]]
name = "mealy_machine"
path = "tests/mealy_machine.rs"

[[bin]]
name = "moore_machine"
path = "tests/moore_machine.rs"

[[bin]]
name = "actions_emitted"
path = "tests/actions_emitted.rs"

[[bin]]
name = "operations_emitted"
path = "tests/operations_emitted.rs"

[[bin]]
name = "child_forwards_then_transition_exec"
path = "tests/child_forwards_then_transition_exec.rs"

[[bin]]
name = "elif_chain_forward_else_transition_exec"
path = "tests/elif_chain_forward_else_transition_exec.rs"

[[bin]]
name = "else_transition_exec"
path = "tests/else_transition_exec.rs"

[[bin]]
name = "forward_inline_semicolon"
path = "tests/forward_inline_semicolon.rs"

[[bin]]
name = "forward_inline_semicolon_multi"
path = "tests/forward_inline_semicolon_multi.rs"

[[bin]]
name = "forward_multi_native"
path = "tests/forward_multi_native.rs"

[[bin]]
name = "forward_parent"
path = "tests/forward_parent.rs"

[[bin]]
name = "forward_then_native_exec"
path = "tests/forward_then_native_exec.rs"

[[bin]]
name = "forward_then_stack_then_transition_exec"
path = "tests/forward_then_stack_then_transition_exec.rs"

[[bin]]
name = "forward_trailing_whitespace"
path = "tests/forward_trailing_whitespace.rs"

[[bin]]
name = "forward_with_parent_mixed"
path = "tests/forward_with_parent_mixed.rs"

[[bin]]
name = "forwards_twice_then_transition_exec"
path = "tests/forwards_twice_then_transition_exec.rs"

[[bin]]
name = "handler_params_manifest"
path = "tests/handler_params_manifest.rs"

[[bin]]
name = "if_chain_forwards"
path = "tests/if_chain_forwards.rs"

[[bin]]
name = "if_elif_else"
path = "tests/if_elif_else.rs"

[[bin]]
name = "if_forward_else_transition"
path = "tests/if_forward_else_transition.rs"

[[bin]]
name = "if_forward_exec"
path = "tests/if_forward_exec.rs"

[[bin]]
name = "inline_after_forward_then_transition_exec"
path = "tests/inline_after_forward_then_transition_exec.rs"

[[bin]]
name = "inside_comment_transition_ignored"
path = "tests/inside_comment_transition_ignored.rs"

[[bin]]
name = "mixed_inline_forward_stack_then_transition_exec"
path = "tests/mixed_inline_forward_stack_then_transition_exec.rs"

[[bin]]
name = "multi_handler_manifest"
path = "tests/multi_handler_manifest.rs"

[[bin]]
name = "nested_if_transition_exec"
path = "tests/nested_if_transition_exec.rs"

[[bin]]
name = "nested_stack_then_transition"
path = "tests/nested_stack_then_transition.rs"

[[bin]]
name = "stack_forward_then_transition_exec"
path = "tests/stack_forward_then_transition_exec.rs"

[[bin]]
name = "stack_pop_then_transition_exec"
path = "tests/stack_pop_then_transition_exec.rs"

[[bin]]
name = "stack_then_transition"
path = "tests/stack_then_transition.rs"

[[bin]]
name = "stack_then_transition_exec"
path = "tests/stack_then_transition_exec.rs"

[[bin]]
name = "terminal_last_forward"
path = "tests/terminal_last_forward.rs"

[[bin]]
name = "terminal_last_transition"
path = "tests/terminal_last_transition.rs"

[[bin]]
name = "transition_basic"
path = "tests/transition_basic.rs"

[[bin]]
name = "transition_basic_exec"
path = "tests/transition_basic_exec.rs"

[[bin]]
name = "transition_inline_comment"
path = "tests/transition_inline_comment.rs"

[[bin]]
name = "transition_inline_semicolon_comment"
path = "tests/transition_inline_semicolon_comment.rs"

[[bin]]
name = "transition_run_exact_exec"
path = "tests/transition_run_exact_exec.rs"

[[bin]]
name = "transition_state_args_exec"
path = "tests/transition_state_args_exec.rs"

[[bin]]
name = "transition_state_id_exec"
path = "tests/transition_state_id_exec.rs"

[[bin]]
name = "while_forward_then_native"
path = "tests/while_forward_then_native.rs"

[[bin]]
name = "while_forward_then_transition_exec"
path = "tests/while_forward_then_transition_exec.rs"

[[bin]]
name = "while_inline_forward_then_transition_exec"
path = "tests/while_inline_forward_then_transition_exec.rs"

[[bin]]
name = "basic_cli_compile"
path = "tests/basic_cli_compile.rs"

[[bin]]
name = "basic_cli_compile_cwd_tmp"
path = "tests/basic_cli_compile_cwd_tmp.rs"

[[bin]]
name = "basic_cli_stdout"
path = "tests/basic_cli_stdout.rs"

[[bin]]
name = "basic_project"
path = "tests/basic_project.rs"

[[bin]]
name = "basic_snapshot"
path = "tests/basic_snapshot.rs"

[[bin]]
name = "mixed_ops"
path = "tests/mixed_ops.rs"

[[bin]]
name = "mod_b"
path = "tests/mod_b.rs"

[[bin]]
name = "nested_inline_separators"
path = "tests/nested_inline_separators.rs"

[[bin]]
name = "parent"
path = "tests/parent.rs"

[[bin]]
name = "simple_interface"
path = "tests/simple_interface.rs"

[[bin]]
name = "simple_test"
path = "tests/simple_test.rs"

[[bin]]
name = "stack_ops"
path = "tests/stack_ops.rs"

[[bin]]
name = "stack_ops_then_native"
path = "tests/stack_ops_then_native.rs"

[[bin]]
name = "terminal_last_stack_ops"
path = "tests/terminal_last_stack_ops.rs"

[[bin]]
name = "list_ops"
path = "tests/list_ops.rs"

[[bin]]
name = "interface_handlers_emitted"
path = "tests/interface_handlers_emitted.rs"

[[bin]]
name = "interface_with_param"
path = "tests/interface_with_param.rs"

[[bin]]
name = "arithmetic_ops"
path = "tests/arithmetic_ops.rs"

[[bin]]
name = "comparison_ops"
path = "tests/comparison_ops.rs"

[[bin]]
name = "equality"
path = "tests/equality.rs"

[[bin]]
name = "logical_ops"
path = "tests/logical_ops.rs"

[[bin]]
name = "ternary_expr"
path = "tests/ternary_expr.rs"

[[bin]]
name = "35_return_init"
path = "tests/35_return_init.rs"

[[bin]]
name = "36_context_basic"
path = "tests/36_context_basic.rs"

[[bin]]
name = "37_context_reentrant"
path = "tests/37_context_reentrant.rs"

[[bin]]
name = "38_context_data"
path = "tests/38_context_data.rs"

[[bin]]
name = "shadowing"
path = "tests/shadowing.rs"

[[bin]]
name = "handler_outside_state"
path = "tests/handler_outside_state.rs"

[[bin]]
name = "multiple_handlers"
path = "tests/multiple_handlers.rs"

[[bin]]
name = "nested_parent_forward_then_transition_exec"
path = "tests/nested_parent_forward_then_transition_exec.rs"

[[bin]]
name = "parent_forward_then_stack_then_transition_exec"
path = "tests/parent_forward_then_stack_then_transition_exec.rs"

[[bin]]
name = "while_inline_forward_stack_then_transition_exec"
path = "tests/while_inline_forward_stack_then_transition_exec.rs"

[[bin]]
name = "forward_inline_block_comment"
path = "tests/forward_inline_block_comment.rs"

[[bin]]
name = "forward_inline_line_comment"
path = "tests/forward_inline_line_comment.rs"

[[bin]]
name = "forward_parent_exec"
path = "tests/forward_parent_exec.rs"

[[bin]]
name = "forward_then_transition_exec"
path = "tests/forward_then_transition_exec.rs"

[[bin]]
name = "parent_forward_then_transition_exec"
path = "tests/parent_forward_then_transition_exec.rs"

[[bin]]
name = "stack_ops_then_transition_exec"
path = "tests/stack_ops_then_transition_exec.rs"

[[bin]]
name = "transition_args"
path = "tests/transition_args.rs"


[[bin]]
name = "39_tagged_instantiation"
path = "tests/39_tagged_instantiation.rs"

[[bin]]
name = "40_hsm_parent_state_vars"
path = "tests/40_hsm_parent_state_vars.rs"

[[bin]]
name = "41_hsm_single_parent"
path = "tests/41_hsm_single_parent.rs"

[[bin]]
name = "42_hsm_three_levels"
path = "tests/42_hsm_three_levels.rs"

[[bin]]
name = "43_hsm_multi_children"
path = "tests/43_hsm_multi_children.rs"

[[bin]]
name = "44_hsm_sibling_transitions"
path = "tests/44_hsm_sibling_transitions.rs"

[[bin]]
name = "45_hsm_enter_child_only"
path = "tests/45_hsm_enter_child_only.rs"

[[bin]]
name = "46_hsm_enter_parent_only"
path = "tests/46_hsm_enter_parent_only.rs"

[[bin]]
name = "47_hsm_enter_both"
path = "tests/47_hsm_enter_both.rs"

[[bin]]
name = "48_hsm_exit_handlers"
path = "tests/48_hsm_exit_handlers.rs"

[[bin]]
name = "49_hsm_enter_exit_params"
path = "tests/49_hsm_enter_exit_params.rs"

[[bin]]
name = "50_hsm_omitted_handlers"
path = "tests/50_hsm_omitted_handlers.rs"
